--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,56 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.main-container {
+    padding: 5em;
+    cursor: auto;
+    }
+    
+    .hero-container {
+    
+    }
+    
+    .hero-header {
+    font-size: larger;
+    font-size: 30px;
+    font-family: cursive;
+    }
+    
+    
+    .btn-section {
+        display: inline-block;
+        padding: 1em;
+    }
+    
+    .btn {
+        margin:1em;
+        padding: 0.5em;
+        border: 1px solid red;
+        cursor: pointer;
+    }
+
+
+    .flex-container {
+        display: flex;
+    }
+
+
+    /*Width Section propotionally*/
+
+    .wd-10 {
+        width: 10%;
+    }
+
+    .wd-30 {
+        width: 30%;
+    }
+
+    .wd-60 {
+        width: 60%;
+    }
+
+    .wd-100 {
+        width: 100%;
+    }
