A feature push to check CI/CD pipeline

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -33,7 +33,8 @@
   <div class="main-container">
     <div class="hero-section">
         <h1 class="hero-header">Welcome to Just Chat</h1>
-        <p>An web app developed to let you connect with people</p>
+        <p>An web app developed to let you connect with people.</p>
+        <span>A feature , 2 check CI/CD pipelines</span>
     </div>
     <div class="btn-section">
         <button class="btn" (click)="onButtonClick('login')">Login</button>
