--- a/src/styles.css
+++ b/src/styles.css
@@ -79,6 +79,15 @@
         width: 100%;
     }
 
+    /*Height propotionally*/
+    .h-10 {
+        height: 10%;
+    }
+
+    .h-80 {
+        height: 80%;
+    }
+
 
 
     /* Nav */
@@ -109,7 +118,13 @@
         border-radius: 1em 0em 0em 1em;
     }
 
+    .border-bottom {
+        border-bottom: 1px solid red;
+    }
 
+    .border-right {
+        border-right: 1px solid red;
+    }
     /* Background*/
     .black-back {
         background-color: black;
@@ -130,6 +145,10 @@
         color: white;
     }
 
+    .red {
+        color: red;
+    }
+
 
 
     .rounded-image {
@@ -147,6 +166,10 @@
 
     .pad-1em {
         padding: 1em;
+    }
+
+    .pad-_5em {
+        padding: 0.5em;
     }
 
 
@@ -169,3 +192,16 @@
         margin: 0 auto;
         width: 80%;
     }
+
+
+
+    /*Float*/
+    .float-left {
+        float: left;
+    }
+
+    .float-right {
+        float:right;
+    }
+
+    
